# cableTool

./: .gitignore  CMakeLists.txt  CMakeListsTemplate.txt  README.md  toolchain-mingw.cmake
commands/: distance_command.cpp
core/: cableTool.cpp  command_registry.cpp
db/: CableData.h  DatabaseManager.cpp  DatabaseManager.h
engine/: Calculator.h  SheathCalc.cpp  SheathCalc.hpp
headers/: ParsedArgs.hpp  base_command.hpp  cableLoader.hpp  command_registry.hpp  config.h  distance_command.hpp
inputs/: cableData.json
src/: main.cpp
